--- a/app/scss/components/_c-labels.scss
+++ b/app/scss/components/_c-labels.scss
@@ -1,4 +1,14 @@
 .label{
+	@include fontSize(32,26,32);
+	font-family: 'Roboto', serif;
+	font-weight:700;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
+	color:$gray;
+	display: inline-block;
+	//border-bottom: 1px solid $red;
+	margin-top: 1rem;
+	padding-bottom: 2rem;
 
 	&--hero{
 		@include fontSize(24,28,18);
