--- a/app/css/master-css.css
+++ b/app/css/master-css.css
@@ -474,27 +474,15 @@ body {
     width: 100%; }
   .hero-content {
     position: absolute;
+    position: absolute;
+    left: 50%;
+    top: 54.5%;
+    transform: translate(-50%, -50%);
+    width: 100%;
     background-color: transparent;
-    height: 70%;
     margin: auto;
-    top: 0;
-    left: 5%;
-    bottom: 0;
-    right: 5%;
     text-align: center;
-    padding: 0 3rem;
-    padding-top: 6rem; }
-    @media screen and (min-width: 1024px) {
-      .hero-content {
-        top: 5%;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        padding-top: 4rem;
-        width: 48%;
-        height: 70%;
-        margin: auto;
-        background-color: transparent; } }
+    padding: 0 3rem; }
   .hero-title {
     color: #ed1e4c;
     font-family: 'Playfair Display', serif;
