--- a/app/css/master-css.css
+++ b/app/css/master-css.css
@@ -476,13 +476,16 @@ body {
     position: absolute;
     position: absolute;
     left: 50%;
-    top: 54.5%;
+    top: 55%;
     transform: translate(-50%, -50%);
     width: 100%;
     background-color: transparent;
     margin: auto;
     text-align: center;
     padding: 0 3rem; }
+    @media screen and (min-width: 1024px) {
+      .hero-content {
+        top: 53.5%; } }
   .hero-title {
     color: #ed1e4c;
     font-family: 'Playfair Display', serif;
@@ -546,7 +549,7 @@ body {
     margin-top: 2.5rem; }
     @media screen and (max-width: 767px) {
       .hero-subtitle {
-        font-size: 3rem; } }
+        font-size: 2.8rem; } }
     @media screen and (min-width: 768px) {
       .hero-subtitle {
         font-size: 3rem; } }
